Enlaces añadidos al navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <img src="images/perfil.jpg" alt="" class="usuario" />
         <h2>ALEJANDRO ESQUIVEL</h2>
         <h3>DESARROLLADOR WEB FRONT-END</h3>
+        <ul class="navegacion">
+          <li><a href="#portada">Portada</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
       </nav>
       <section class="portada" id="portada">
         <h1>
