Añadido estilo a la barra de navegación lateral y enlaces a redes sociales

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
+        <div class="redes">
+          <h2>REDES SOCIALES</h2>
+          <div class="contenedorLogos">
+            <a
+              href="https://www.linkedin.com/in/alejandro-esquivel-rodriguez/"
+              target="_blank"
+              ><img src="images/Linkedin.png" alt="Enlace al perfil de Linkedin"
+            /></a>
+            <a href="https://github.com/aleaallee" target="_blank"
+              ><img
+                src="images/GitHubLight.png"
+                alt="Enlace al repositorio de Github"
+            /></a>
+          </div>
+        </div>
       </nav>
       <section class="portada" id="portada">
         <h1>
