Ícono de linkedin modificado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a
               href="https://www.linkedin.com/in/alejandro-esquivel-rodriguez/"
               target="_blank"
-              ><img src="images/Linkedin.png" alt="Enlace al perfil de Linkedin"
+              ><img src="images/LI-In-Bug.svg" alt="Enlace al perfil de Linkedin"
             /></a>
             <a href="https://github.com/aleaallee" target="_blank"
               ><img
