Arreglado el espaciado de los objetos de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
   <body>
     <div class="contenedor">
       <nav>
-        <img src="images/perfil.jpg" alt="" class="usuario" />
-        <h2>ALEJANDRO ESQUIVEL</h2>
-        <h3>DESARROLLADOR WEB FRONT-END</h3>
-        <ul class="navegacion">
-          <li><a href="#portada">Portada</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-        <div class="redes">
-          <h2>REDES SOCIALES</h2>
-          <div class="contenedorLogos">
-            <a
-              href="https://www.linkedin.com/in/alejandro-esquivel-rodriguez/"
-              target="_blank"
-              ><img src="images/LI-In-Bug.svg" alt="Enlace al perfil de Linkedin"
-            /></a>
-            <a href="https://github.com/aleaallee" target="_blank"
-              ><img
-                src="images/GitHubLight.png"
-                alt="Enlace al repositorio de Github"
-            /></a>
+        <div class="wrapper">
+          <div class="usuario">
+            <img
+              src="images/perfil.jpg"
+              alt="Imágen de perfil de Alejandro Esquivel"
+            />
+            <h2>ALEJANDRO ESQUIVEL</h2>
+            <h3>DESARROLLADOR WEB FRONT-END</h3>
+          </div>
+          <ul class="navegacion">
+            <li><a href="#portada">Portada</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+          </ul>
+          <div class="redes">
+            <h2>REDES SOCIALES</h2>
+            <div class="contenedorLogos">
+              <a
+                href="https://www.linkedin.com/in/alejandro-esquivel-rodriguez/"
+                target="_blank"
+                ><img src="images/LI-In-Bug.svg" alt="Enlace al perfil de Linkedin"
+              /></a>
+              <a href="https://github.com/aleaallee" target="_blank"
+                ><img
+                  src="images/GitHubLight.png"
+                  alt="Enlace al repositorio de Github"
+              /></a>
+            </div>
           </div>
         </div>
       </nav>
