--- a/index.html
+++ b/index.html
@@ -46,7 +46,50 @@
         <a href="#portfolio">Portafolio</a>
       </section>
       <br />
-      <section class="portfolio" id="portfolio"></section>
+      <section class="portfolio" id="portfolio">
+        <div class="top">
+          <article>
+            <h2>ACERCA DE MÍ</h2>
+            <p>
+              Técnico en administración de sistemas en red y desarrollo de
+              aplicaciones web al que le gusta aprender nuevas tecnologías, librerías
+              y frameworks en el ámbito del desarrollo web
+            </p>
+          </article>
+          <article>
+            <h2>EXPERIENCIA</h2>
+            <div class="trabajo">
+              <h3>IMSP Badalona <span> - 2014</span></h3>
+              <p>
+                Informático en practicas encargado del mantenimiento de los equipos
+                de diferentes centros docentes.
+              </p>
+            </div>
+            <div class="trabajo">
+              <h3>AMVARA <span>2017 - 2018</span></h3>
+              <p>
+                Desarrollador web en practicas encargado de llevar a cabo el rediseño
+                de la página web de la empresa.
+              </p>
+            </div>
+          </article>
+        </div>
+        <div class="bottom">
+          <article>
+            <h2>TECNOLOGÍAS</h2>
+            <div class="tecnologias">
+              <img src="images/html5.svg" alt="HTML5" />
+              <img src="images/css3.svg" alt="CSS3" />
+              <img src="images/js.svg" alt="Javascript" />
+              <img src="images/sass.svg" alt="SASS" />
+              <img src="images/linux.svg" alt="Linux" />
+              <img src="images/sql.svg" alt="SQL" />
+              <img src="images/vue.svg" alt="Vue" />
+              <img src="images/php.svg" alt="PHP" />
+            </div>
+          </article>
+        </div>
+      </section>
       <section class="contacto" id="contacto"></section>
     </div>
   </body>
