--- a/afa.html
+++ b/afa.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AFA</title>
     <style>
+      body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
       .escena {
         width: 500px;
         height: 500px;
-        margin: auto;
-        margin-top: 200px;
         perspective: 800px;
       }
 
