--- a/afa.html
+++ b/afa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AFA</title>
+    <title>Damn</title>
     <style>
       body {
   display: flex;
@@ -54,7 +54,7 @@
   <body>
     <div class="escena">
       <article class="caja">
-        <div class="cara delante">Afa</div>
+        <div class="cara delante">Sup</div>
         <div class="cara atras">👌</div>
       </article>
     </div>
