--- a/AlbuferaPlaza/index.html
+++ b/AlbuferaPlaza/index.html
@@ -56,7 +56,7 @@
             </a>
             <a href="https://www.twitter.com">
               <img
-                src="/imagenes/twitter.svg"
+                src="imagenes/twitter.svg"
                 alt="Ir al twitter del centro comercial."
               />
             </a>
