Form input label corrections.

--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
         >
           <div class="formgroup">
             <label for="nombre">NOMBRE</label>
-            <input type="text" name="nombre" />
+            <input type="text" name="nombre" id="nombre" />
           </div>
           <div class="formgroup">
             <label for="correo">CORREO</label>
-            <input type="email" name="correo" />
+            <input type="email" name="correo" id="correo"/>
           </div>
           <div class="formgroup entero">
             <label for="texto">MENSAJE</label>
-            <textarea name="texto"></textarea>
+            <textarea name="texto" id="texto"></textarea>
           </div>
           <input type="submit" value="ENVIAR MENSAJE" />
         </form>
