--- a/afa.html
+++ b/afa.html
@@ -54,7 +54,7 @@
   <body>
     <div class="escena">
       <article class="caja">
-        <div class="cara delante">Sup</div>
+        <div class="cara delante">Hola</div>
         <div class="cara atras">👌</div>
       </article>
     </div>
