--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <div class="wrapper">
       <section class="usuario">
-        <img src="images/perfil.jpg" alt="Imágen de perfil de Alejandro Esquivel" />
+        <img src="images/perfil.webp" alt="Imágen de perfil de Alejandro Esquivel" />
         <h2>ALEJANDRO ESQUIVEL</h2>
         <h3>DESARROLLADOR WEB FRONT-END</h3>
       </section>
