Updated github icon URL extension to use webp instead of jpeg

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="contenedorLogos">
           <a href="https://www.linkedin.com/in/alejandro-esquivel-rodriguez/" target="_blank"><img
               src="images/LI-In-Bug.svg" alt="Enlace al perfil de Linkedin" /></a>
-          <a href="https://github.com/aleaallee" target="_blank"><img src="images/GitHubLight.png"
+          <a href="https://github.com/aleaallee" target="_blank"><img src="images/GitHubLight.webp"
               alt="Enlace al repositorio de Github" /></a>
         </div>
       </section>
