Added accidentally removed github icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <div class="wrapper">
       <section class="usuario">
-        <img src="images/perfil.webp" alt="Imágen de perfil de Alejandro Esquivel" />
+        <img src="images/perfil.jpg" alt="Imágen de perfil de Alejandro Esquivel" />
         <h2>ALEJANDRO ESQUIVEL</h2>
         <h3>DESARROLLADOR WEB FRONT-END</h3>
       </section>
@@ -26,7 +26,7 @@
         <div class="contenedorLogos">
           <a href="https://www.linkedin.com/in/alejandro-esquivel-rodriguez/" target="_blank"><img
               src="images/LI-In-Bug.svg" alt="Enlace al perfil de Linkedin" /></a>
-          <a href="https://github.com/aleaallee" target="_blank"><img src="images/GitHubLight.webp"
+          <a href="https://github.com/aleaallee" target="_blank"><img src="images/GitHubLight.png"
               alt="Enlace al repositorio de Github" /></a>
         </div>
       </section>
